# zwlog

./: .gitignore  CMakeLists.txt  README.md
include/zwlog/: DefaultFormatter.hpp  ILogFormatter.hpp  LogContext.hpp  LogFormatterBase.hpp  LogTargetBase.hpp  LogTargetConsole.hpp  LogTargetFile.hpp  LogTargetMessageBox.hpp  Logger.hpp  MessageFormatter.hpp  SourceLocationFormatter.hpp
src/: DefaultFormatter.cpp  LogContext.cpp  LogFormatterBase.cpp  LogTargetBase.cpp  LogTargetConsole.cpp  LogTargetFile.cpp  LogTargetMessageBox.cpp  Logger.cpp  MessageFormatter.cpp  SourceLocationFormatter.cpp
